# code-Clone-Detector

./: .gitignore  README.md  config.properties  config.yaml  main.py  pyproject.toml
output/: results.json
src/: __init__.py  app_config.py  calculate.py  call_llm_api.py  clone_detection.py  config.py  llm_client.py  logger_setup.py  logging_utils.py  pipeline.py  result_parser.py  saga_runner.py  tokenizer.py  unixcoder.py
testcases/01.datahub/modules/split/modules/cmdb/general_work/SERVICE/: ngModel.js
tests/: test_interface.py
