[project]
name = "code-clone-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.2",
    "scikit-learn>=1.8.0",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-javascript>=0.25.0",
]
